# py-math

./: .gitignore  Pipfile  README.md  matchnum.py  math.py  pyproject.toml  requirements.txt  基础代数.md  微积分入门.md  数学概念.md  数学符号.md
ai/: doc.md  pytorch_gradient_accumulation.py
ai/default_args/: lstm.py
ai/exp/: exp_basic.py  exp_lstm.py
ai/handwrite_classification/: train.py
ai/models/lstm/: model.py
ai/neural-networks-and-deep-learning/: train.py
ai/numpy/: first.ipynb
ai/numpy/.ipynb_checkpoints/: first-checkpoint.ipynb
ai/test/: test_sltm.py
ai/zhaiteng/: lession2_numerical_diff.py  lesson1.dataset.py  lesson1.py  lesson1_mnist.py  lesson1_softmax.py
algorithm/: doc.md
config/: .env.beta.ini  .env.dev.ini
configs/: .env.dev.ini  .env.ini  .env.prod.ini
core/: argument_tools.py  base_class.py  config_class.py  crypto_class.py  cuda_utils.py  db_class.py  logger_class.py  pyasync_class.py  time_class.py
dictionary/: 200dic.txt  20200dic.txt  dict.py  excel2txt.py
differential/: dsolve.test.py  dsolve2.test .py
doc/: poetry使用手册.md  pyproject.toml  setup.md  web3_test.py
lzo-2.10/autoconf/: config.guess  config.sub  depcomp  install-sh
porn/: clawer.py
src/ai/default_args/: lstm.py
src/ai/exp/: exp_lstm.py
src/ai/neural-networks-and-deep-learning/: network.py
src/common/: wandb_utils.py
src/core/: base_class.py  config_class.py  crypto_class.py  cuda_utils.py  db_class.py  decimal_utils.py  logger_class.py  process_utils.py  pyasync_class.py  time_class.py  tools_class.py
src/dictionary/: Pipfile
src/helper/: access_cookie.json  bing_helper.py  chatgpt_helper.py
src/rl/: test_policy.py
src/test/: async_await_test.py  splite_pdf.py  splite_pdf_to_mk.py
src/threads/: launch.py  launch_monitor.py  thread_timeout.py  timer.py
src/tool/: chatgpt_helper.py
src/utils/: thread_utils.py
threads/: launch.py  launch_monitor.py  start.sh  thread_timeout.py
tools/: 200dic.txt  dict.py  excel2txt.py  mk.py  mk_test.py
(+19 files in other folders)
