[tool.poetry]
name = "pytech"
version = "0.1.0"
description = ""
authors = ["sir"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<3.10"
requests = "^2.28.2"
web3 = "^5.31.3"
readmdict = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
