[tool.poetry]
name = "pytech"
version = "0.1.0"
description = ""
authors = ["sir"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<4.0.0"
requests = "^2.28.2"
web3 = "^5.31.3"
readmdict = "^0.1.1"
environs = "^9.5.0"
pymysql = "^1.0.2"
redis = "^4.5.1"
pymongo = "^4.3.3"
kafka-python = "^2.0.2"
selenium = "^4.8.2"
selenium-wire = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
