[tool.poetry]
name = "pytech"
version = "0.1.0"
description = ""
authors = ["sir"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
requests = "^2.28.2"
web3 = "^5.13.1"
readmdict = "^0.1.1"
environs = "^9.5.0"
pymysql = "^1.0.2"
redis = "^4.5.1"
pymongo = "^4.3.3"
kafka-python = "^2.0.2"
selenium = "^4.8.2"
selenium-wire = "^5.1.0"
flask = "^2.2.2"
seaborn = "^0.12.1"
regex = "^2022.10.31"
pyecharts = "^2.0.1"
openai = "^0.26.5"
revchatgpt = "^3.3.2"
edgegpt = "^0.0.55"
hexbytes = "^0.3.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pymupdf = "1.19.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
