[tool.poetry]
name = "math-learn"
version = "0.1.0"
description = ""
authors = ["sir"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

#设置poetry包管理工具的自定义pypi镜像源配置
[[tool.poetry.source]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

